[package]
name = "hostfile"
version = "1.1.1"
authors = ["Aneesh Durg <aneeshdurg17@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aneeshdurg/hostfile"
repository = "https://github.com/aneeshdurg/hostfile"
description = "A rust crate for parsing /etc/hosts"
keywords = ["hosts", "networking", "linux"]
categories = ["parsing", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_Com",
] }

[dev-dependencies]
mktemp = "0.4.0"
test-with = "0.14.4"
